# ProofFrog

./: .gitattributes  .gitignore  .gitmodules  .pylintrc  CLAUDE.md  CLAUDE_MCP.md  CLAUDE_TACTIC_CACHE.md  Makefile  README.md  RELEASE.md  canonicalize_game_notes.md  jupyter_kernel.py  mypy.ini  pyproject.toml  pytest.ini  regenerateParser.sh  requirements-dev.txt  requirements.txt  testAST.sh  testParsing.sh  testProofTypeCheck.sh  testProofs.sh  testSemanticAnalysis.sh
.github/workflows/: black.yml  emacs-lint.yml  emacs-release.yml  mypy.yml  pylint.yml  test.yml
docs/: guide.md  latex-export.md
docs/for_agents/: CLAUDE.md  EASYCRYPT_TACTICS.md  FROGLANG_REFERENCE.md  MCP_GUIDE.md  TRANSFORMS.md  WRITING_PROOFS.md
emacs/: Makefile  README.md  prooffrog-mode.el
examples/Primitives/: DigitalSignature.primitive  Hash.primitive  KeyAgreement.primitive  MAC.primitive  PRF.primitive  PRG.primitive  PRP.primitive  PubKeyEnc.primitive  SecretSharing.primitive  SymEnc.primitive
hacs/: Multi=>Single.proof  MultiChallengeCPA.game  Single=>Multi.proof  SingleChallengeCPA.game  SymEnc.primitive
ill-formed/fixtures/: EmptyPrimitive.primitive  SimplePrimitive.primitive  VoidFPrimitive.primitive
ill-formed/primitives/: InvalidExpression.primitive  InvalidMethodReturnType.primitive  InvalidParameter.primitive  MismatchedType.primitive  RepeatedMethod.primitive  RepeatedMethodParam.primitive  UndefinedType.primitive
ill-formed/scheme/: BadIf.scheme  IncorrectReturn.scheme
jupyter/: Dockerfile  README.md
jupyter/example/: OTUCimpliesOTS.ipynb
jupyter/kernel/: kernel.json
proof_frog/: __init__.py  __main__.py  _examples_pin.py  _git_sha.py  advantage.py  ast_generation.py  dependencies.py  describe.py  diagnostics.py  frog_ast.py  frog_parser.py  latex_output.py  mcp_server.py  primitive_ast_generator.py  proof_engine.py  proof_frog.py  redundant_copy.py  scaffolding.py  semantic_analysis.py  suggestions.py  visitors.py  web_server.py
proof_frog/antlr/: Game.g4  Primitive.g4  Proof.g4  Scheme.g4  Shared.g4
proof_frog/export/: __init__.py
proof_frog/lsp/: __init__.py  completion.py  diagnostics.py  document_state.py  folding.py  navigation.py  proof_features.py  rename.py  server.py  symbols.py
proof_frog/parsing/: Game.interp  Game.tokens  GameLexer.interp  GameLexer.py  GameLexer.tokens  GameParser.py  GameVisitor.py  Primitive.interp  Primitive.tokens  PrimitiveLexer.interp  PrimitiveLexer.py  PrimitiveLexer.tokens  PrimitiveParser.py  PrimitiveVisitor.py  Proof.interp  Proof.tokens  ProofLexer.interp  ProofLexer.py  ProofLexer.tokens  ProofParser.py  ProofVisitor.py  Scheme.interp  Scheme.tokens  SchemeLexer.interp  SchemeLexer.py  SchemeLexer.tokens  SchemeParser.py  SchemeVisitor.py
proof_frog_kernel/: kernel.json
scripts/: easycrypt-fork.sh  easycrypt-goals.sh  easycrypt.sh  ec_export_regression.sh
src/: PrimitiveASTGenerator.py  main.py
src/ast/: Field.py  (+13 more)
tests/: test_ast.py  test_bitstring_literals.py  test_branch_elimination.py  test_check_gate.py  test_check_type_visitor.py  test_cli_json.py  test_collapse_assignment.py  test_dead_null_guard.py  test_dependencies.py  test_describe.py  test_expand_tuple_fields.py  test_expand_tuples.py  test_expression_str.py  test_file_metadata.py  test_if_simplification.py  test_inline_single_use_variable.py  test_inlining.py  test_instantiate_game.py  test_merge_product_samples.py  test_merge_uniform_samples.py  test_modint_parsing.py  test_modint_proof_engine.py  test_modint_type_checking.py  test_modint_visitors.py  test_parse_errors.py  test_proofs.py  test_reduction.py  test_redundant_copies.py  test_remove_duplicate_fields.py  test_remove_field_transformer.py  test_same_field_visitor.py  test_simplify_return.py  test_slice_simplification.py  test_split_uniform_samples.py  test_subset_type_normalizer.py  test_substitution_transformer.py  test_symbolic_computation_transformer.py  test_uniform_xor_simplification.py  test_unnecessary_field_visitor.py  test_unreachable_transformer.py  (+2 more)
vscode-extension/: .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json
(+473 files in other folders)
