[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "proof_frog"
version = "0.1.0"
description = "A tool for verifying game-hopping proofs"
readme = "README.md"
authors = [{name = "Ross Evans", email = "rpevans@uwaterloo.ca"}]
requires-python = ">=3.11"
license={file = "LICENSE"}
dependencies = [
	"antlr4-python3-runtime >= 4.13",
	"colorama >= 0.4",
	"z3-solver >= 4.12",
	"sympy >= 1.12"
]

[project.urls]
Source = "https://github.com/ProofFrog/ProofFrog"
Documentation = "https://prooffrog.github.io"

[project.scripts]
proof_frog = "proof_frog:main"

[tool.black]
exclude = 'proof_frog/parsing/'

[tool.pytest.ini_options]
pythonpath = 'proof_frog'

[tool.mypy]
exclude = 'parsing'
strict = 'True'
files = '**/*.py'
mypy_path = 'proof_frog'
[[tool.mypy.overrides]]
module='proof_frog.parsing.*'
follow_imports = 'skip'
[[tool.mypy.overrides]]
module='parsing.*'
follow_imports = 'skip'
[[tool.mypy.overrides]]
module='antlr4.*'
ignore_missing_imports = 'True'
[[tool.mypy.overrides]]
module='z3.*'
ignore_missing_imports = 'True'

[tool.pylint.MASTER]
disable = '''missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
    too-few-public-methods,
    too-many-public-methods,
    too-many-lines,
    too-many-locals,
    too-many-statements,
    too-many-branches,
    too-many-instance-attributes,
    too-many-return-statements,
    too-many-boolean-expressions
'''
max-line-length='120'
ignore='parsing'
good-names='i,j,k,v'
