[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "proof_frog"
version = "0.3.1"
description = "A tool for checking transitions in cryptographic game-hopping proofs"
keywords = ["cryptography", "latex", "game-hopping", "proofs"]
readme = "README.md"
authors = [
    {name = "Ross Evans", email = "rpevans@uwaterloo.ca"},
    {name = "Douglas Stebila", email = "dstebila@uwaterloo.ca"},
]
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
]
dependencies = [
	"antlr4-python3-runtime >= 4.13",
	"colorama >= 0.4",
	"z3-solver >= 4.12",
	"sympy >= 1.12",
	"flask >= 3.0",
	"click >= 8.0"
]

[project.optional-dependencies]
dev = ["mypy", "pylint", "types-colorama", "pytest", "pytest-xdist", "black"]
mcp = ["mcp[cli] >= 1.0"]

[project.urls]
Source = "https://github.com/ProofFrog/ProofFrog"
Documentation = "https://prooffrog.github.io"
"Release Notes" = "https://github.com/ProofFrog/ProofFrog/blob/main/RELEASE.md"

[project.scripts]
proof_frog = "proof_frog:main"

[tool.black]
exclude = 'proof_frog/parsing/'

[tool.pytest.ini_options]
pythonpath = 'proof_frog'
addopts = '-n auto'

[tool.mypy]
exclude = 'parsing'
strict = 'True'
files = '**/*.py'
mypy_path = 'proof_frog'
[[tool.mypy.overrides]]
module='proof_frog.parsing.*'
follow_imports = 'skip'
[[tool.mypy.overrides]]
module='parsing.*'
follow_imports = 'skip'
[[tool.mypy.overrides]]
module='antlr4.*'
ignore_missing_imports = 'True'
[[tool.mypy.overrides]]
module='z3.*'
ignore_missing_imports = 'True'
[[tool.mypy.overrides]]
module='sympy.*'
ignore_missing_imports = 'True'
[[tool.mypy.overrides]]
module='mcp.*'
ignore_missing_imports = 'True'

[tool.pylint.MASTER]
disable = '''missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
    too-few-public-methods,
    too-many-public-methods,
    too-many-lines,
    too-many-locals,
    too-many-statements,
    too-many-branches,
    too-many-instance-attributes,
    too-many-return-statements,
    too-many-boolean-expressions
'''
max-line-length='120'
ignore='parsing'
good-names='i,j,k,v'
